# hyprclj

./: .gitignore  API_COMPATIBILITY_NOTES.md  BUILD_SUCCESS.md  CLAUDE.md  CLEAN_EXIT_NOTES.md  CLOSE_FIX.md  COMPLETE.md  CONGRATS.md  CURRENT_STATUS.md  DEVELOPMENT.md  DRAWING_PRIMITIVES_NEXT.md  EVENT_ARCHITECTURE.md  FINAL_ACCOMPLISHMENTS.md  FINAL_STATUS.md  FLICKER_REDUCTION.md  HYPRCLJ_COMPLETE.md  IMPLEMENTATION_NOTES.md  KNOWN_ISSUES.md  LAYOUT_FIX.md  LAYOUT_GUIDE.md  PHASE2_SUCCESS.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  README_COMPLETE.md  README_FINAL.md  RECONCILIATION_DESIGN.md  RESPONSIVE_LAYOUT_SOLUTION.md  SESSION_SUMMARY.md  SETUP.md  STATUS.md  SUCCESS_SUMMARY.md  TESTING_GUIDE.md  TEXT_INPUT_COMPLETE.md  TUTORIAL.md  USAGE.md  VDOM_ROADMAP.md  build.sh  deps.edn  notes.txt  (+1 more)
.cpcache/: 126619696.basis  126619696.cp  2840176546.basis  2840176546.cp  3638847383.basis  3638847383.cp
examples/: absolute_position_test.clj  alignment_test.clj  auto_counter.clj  auto_simple.clj  backgrounds_and_borders.clj  bar_chart_test.clj  best_practice_layout.clj  border_test.clj  border_test_responsive.clj  charts_demo.clj  charts_easing_demo.clj  charts_reactive_demo.clj  charts_smooth_demo.clj  children_prop_test.clj  clean_nesting.clj  clean_responsive.clj  color_effects_demo.clj  demo.clj  (+63 more)
native/: CMakeLists.txt  build.sh  hyprclj_backend.cpp  hyprclj_button.cpp  hyprclj_checkbox.cpp  hyprclj_element.cpp  hyprclj_layouts.cpp  hyprclj_line.cpp  hyprclj_rectangle.cpp  hyprclj_scrollarea.cpp  hyprclj_text.cpp  hyprclj_textbox.cpp  hyprclj_window.cpp
(+193 files in other folders)
